<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="com.example.davegilbier.alarmclockstopwatch.StopWatch"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textColor="#000000"
        android:textSize="50sp"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:layout_marginLeft="90dp"
        android:layout_marginBottom="20dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="50dp"
        android:layout_marginBottom="15dp">

        <ImageView
            android:id="@+id/btnStart"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:background="#FFFFFF"
            android:src="@drawable/playy"
            android:text="@string/start" />

        <ImageView
            android:id="@+id/btnPause"
            android:layout_width="80dp"
            android:layout_height="91dp"
            android:background="#FFFFFF"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:src="@drawable/pause"
            android:text="@string/pause" />

        <ImageView
            android:id="@+id/btnReset"
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:background="#FFFFFF"
            android:src="@drawable/reset"
            android:text="@string/reset" />
    </LinearLayout>
    <Button
        android:id="@+id/btnSaveLap"
        android:layout_marginLeft="15dp"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:layout_marginBottom="10dp"
        android:text="@string/r_e_c_o_r_d" />
    <ListView
        android:id="@+id/listview"
        android:layout_width="358dp"
        android:layout_height="230dp"
        android:layout_marginLeft="12dp"

        />


    <Button
        android:id="@+id/btnAlarm"
        android:layout_width="312dp"
        android:layout_height="47dp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="10dp"
        android:background="#FF69B4"
        android:onClick="alarmClock"
        android:text="@string/a_l_a_r_m_c_l_o_c_k"
        android:textSize="20sp"
        tools:ignore="OnClick" />


</LinearLayout>

